bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: not found: value asmile
  if (asmile == bsmile) {return(true);}
      ^MonkeyTrouble:3: error: not found: value bsmile
  if (asmile == bsmile) {return(true);}
                ^