bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (asmile == bsmile) {return(true);}
  return (false)
}